<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UMBC Events!</string>
    <string name="action_settings">Settings</string>
    <string name="orgButtonString">Organization Mode</string>
    <string name="stuButtonString">Student Mode</string>
    <string name="title_activity_organization_form">Organization Form</string>
    <string name="title_activity_student">Events!</string>
    <string name="submitMessage">After filling in all the information, 
        click the submit button.</string>
    <string name="resetInfo">Reset</string>
    <string name="menu_settings">Settings</string>
    <!-- hint values -->
    <string name="orgNameHint">Organization Name</string>
    <string name="eventNameHint">Event Name</string>
    <string name="eventLocHint">Event Location</string>
    <string name="startTimeButton">Enter Start Time!</string>
    <string name="endTimeButton">Enter End time!</string>
    <string name="tagHint">Tags (comma separated)</string>
    <string name="eventInfo">Event Description</string>
    <string name="submitButtonText">Submit</string>
    <string name="datePickerButton">Enter a date for you event!</string>
    <string name="search_hint">Search Events</string>
    <!-- splash screen values -->
    <string name="splashText">Splash</string>
    <!-- preference settings values -->
    <string name="pref_orgName_title">Organization Name</string>
    <string name="pref_orgName_summary">Save the name of your organization</string>
    <string name="pref_location_title">Default Location</string>
    <string name="pref_location_summary">Save a default location for your event</string>
    <string name="pref_clock">Clock type</string>
    <string name="pref_clock_title">Use 24 Hour Clock?"</string>
    <string name="pref_clock_on">Using 24 Hour Clock</string>
    <string name="pref_clock_off">Using 12 Hour Clock</string>
    <string name="pref_clock_summary">Use 12 hour clock?</string>
    <!-- Junk -->
    <string name="search">Search</string>
    <string name="helpInfo">Help</string>

</resources>