<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- 
        android:defaultValue="None" -->
    <EditTextPreference
        android:key="pref_orgName"
        android:title="@string/pref_orgName_title" 
        android:summary="@string/pref_orgName_summary"/>
    
     <EditTextPreference
        android:key="pref_location"
        android:title="@string/pref_location_title" 
        android:summary="@string/pref_location_summary"/>
    
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_clock"
        android:title="@string/pref_clock_title"
        android:summaryOn="@string/pref_clock_on"
        android:summaryOff="@string/pref_clock_off"
        android:summary="@string/pref_clock_summary"/>

</PreferenceScreen>