<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.umbcevents.StudentActivity" >

    <item
        android:id="@+id/reset"
        android:orderInCategory="100"
        android:title="@string/resetInfo"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always"
        android:title="@string/search"/>
    
    
     <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/helpInfo"
        app:showAsAction="never"/>
    

</menu>
