<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.umbcevents.OrganizationForm" 
    android:background="@color/Gold">

    
    
    
    <EditText
        android:id="@+id/incEventName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
       
        android:hint="@string/eventNameHint" 
        android:background="@color/Black"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/incOrgNameForm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
       
        android:hint="@string/hello_world" 
        android:background="@color/Black"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/incEventLocation"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        
        android:hint="@string/eventLocHint" 
        android:background="@color/Black"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/enterStartTime"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/startTimeButton" 
        android:background="@color/Black"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/enterFinishTime"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/endTimeButton"
        android:background="@color/Black"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/incTags"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        
        android:hint="@string/tagHint" 
        android:background="@color/Black"
     
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/incEventInfo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        
        android:hint="@string/eventInfo" 
        android:background="@color/Black"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>

</LinearLayout>